--- a/apps/get-files/get-files-cf.yml.j2
+++ b/apps/get-files/get-files-cf.yml.j2
@@ -14,6 +14,9 @@ Parameters:
 
   SubnetIds:
     Type: CommaDelimitedList
+
+  DistributionUrl:
+    Type: String
   {% endif %}
 
 Outputs:
@@ -80,6 +83,9 @@ Resources:
       Environment:
         Variables:
           BUCKET: !Ref Bucket
+          {% if security_environment == 'EDC' %}
+          DISTRIBUTION_URL: !Ref DistributionUrl
+          {% endif %}
       Code: src/
       Handler: get_files.lambda_handler
       MemorySize: 128
