retry Batch.AWSBatchException errors in step function

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -115,7 +115,8 @@
       "Retry": [
         {
           "ErrorEquals": [
-            "Batch.ServerException"
+            "Batch.ServerException",
+            "Batch.AWSBatchException"
           ],
           "MaxAttempts": 2
         },
