Add retries to CHECK_PROCESSING_TIME step

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -198,6 +198,14 @@
       "Parameters": {
         "processing_results.$": "$.results.processing_results"
       },
+      "Retry": [
+        {
+          "ErrorEquals": [
+            "States.ALL"
+          ],
+          "MaxAttempts": 2
+        }
+      ],
       "Catch": [
         {
           "ErrorEquals": [
