Fix event rule target syntax

--- a/apps/handle-batch-event/handle-batch-event-cf.yml.j2
+++ b/apps/handle-batch-event/handle-batch-event-cf.yml.j2
@@ -91,4 +91,5 @@ Resources:
           status:
             - RUNNING
       Targets:
-        - !GetAtt Lambda.Arn
+        - Arn: !GetAtt Lambda.Arn
+          Id: lambda-target
