Add execution_started field to jobs table

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -7,14 +7,14 @@
         "processing_time_in_seconds": 0
       },
       "ResultPath": "$.results",
-      "Next": "JOB_RUNNING"
+      "Next": "EXECUTION_STARTED"
     },
-    "JOB_RUNNING": {
+    "EXECUTION_STARTED": {
       "Type": "Task",
       "Resource": "${UpdateDBLambdaArn}",
       "Parameters": {
         "job_id.$": "$.job_id",
-        "status_code": "RUNNING"
+        "execution_started": true
       },
       "Retry": [
         {
@@ -24,7 +24,7 @@
           "MaxAttempts": 2
         }
       ],
-      "ResultPath": "$.results.job_running",
+      "ResultPath": "$.results.execution_started",
       "Next": "ADD_PREFIX_TO_JOB_PARAMETERS"
     },
     "ADD_PREFIX_TO_JOB_PARAMETERS": {
