Add some default result values to step function

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -4,7 +4,11 @@
     "SET_DEFAULT_RESULTS": {
       "Type": "Pass",
       "Result": {
-        "processing_time_in_seconds": 0
+        "processing_time_in_seconds": 0,
+        "get_files": {
+          "logs": [],
+          "expiration_time": null
+        }
       },
       "ResultPath": "$.results",
       "Next": "JOB_RUNNING"
