Write GET_FILES errors to separate path

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -190,7 +190,7 @@
             "States.ALL"
           ],
           "Next": "JOB_FAILED",
-          "ResultPath": "$.results.get_files"
+          "ResultPath": "$.results.get_files_error"
         }
       ],
       "ResultPath": "$.results.get_files",
