Decouple API name from stack name

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 
 info:
-  title: {{ stack_name }}-api
+  title: {{ api_name }}-api
   version: "TODO include version number"
 
 security:
