--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -2,7 +2,7 @@ openapi: 3.0.1
 
 info:
   title: {{ api_name }}-api
-  version: "TODO include version number"
+  version: ""
 
 security:
   - EarthDataLogin: []
