fix typo in openapi specification

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -98,7 +98,7 @@ paths:
 
   /subscriptions:
     post:
-      description: Adds a subscription with seach criteria and processing parameters to use to process data as it becomes available
+      description: Adds a subscription with search criteria and processing parameters to use to process data as it becomes available
       requestBody:
         content:
           application/json:
