--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -40,8 +40,9 @@ Outputs:
     Value: !Ref StepFunction
 
 Resources:
-  {% for job_type, job_spec in  job_types.items() %}
-  {{ snake_to_pascal_case(job_type) }}:
+  {% for job_type, job_spec in job_types.items() %}
+  {% for task in job_spec['tasks'] %}
+  {{ snake_to_pascal_case(job_type + '_' + task['name']) }}:
     Type: AWS::Batch::JobDefinition
     Properties:
       Type: container
@@ -50,20 +51,20 @@ Resources:
         {{ k }}: {{ v.get('default') or v['api_schema'].get('default') }}
         {% endfor %}
       ContainerProperties:
-        Image: {% if 'image_tag' in job_spec -%}
-            "{{ job_spec['image'] }}:{{ job_spec['image_tag'] }}"
+        Image: {% if 'image_tag' in task -%}
+            "{{ task['image'] }}:{{ task['image_tag'] }}"
           {% else -%}
-            !Sub "{{ job_spec['image'] }}:${ImageTag}"
+            !Sub "{{ task['image'] }}:${ImageTag}"
           {% endif %}
         JobRoleArn: !Ref TaskRoleArn
         ExecutionRoleArn: !GetAtt ExecutionRole.Arn
         ResourceRequirements:
           - Type: VCPU
-            Value: "{{ job_spec['vcpu'] }}"
+            Value: "{{ task['vcpu'] }}"
           - Type: MEMORY
-            Value: "{{ job_spec['memory'] }}"
+            Value: "{{ task['memory'] }}"
         Command:
-          {% for command in job_spec['command'] %}
+          {% for command in task['command'] %}
           - {{ command }}
           {% endfor %}
         Secrets:
@@ -72,7 +73,8 @@ Resources:
           - Name: EARTHDATA_PASSWORD
             ValueFrom: !Sub "${SecretArn}:password::"
       Timeout:
-        AttemptDurationSeconds: {{ job_spec['timeout'] }}
+        AttemptDurationSeconds: {{ task['timeout'] }}
+  {% endfor %}
   {% endfor %}
 
   StepFunction:
@@ -82,8 +84,10 @@ Resources:
       DefinitionS3Location: step-function.json
       DefinitionSubstitutions:
         JobQueueArn: !Ref JobQueueArn
-        {% for job_type in job_types %}
-        {{ snake_to_pascal_case(job_type) }}: !Ref {{ snake_to_pascal_case(job_type) }}
+        {% for job_type, job_spec in job_types.items() %}
+        {% for task in job_spec['tasks'] %}
+        {{ snake_to_pascal_case(job_type + '_' + task['name']) }}: !Ref {{ snake_to_pascal_case(job_type + '_' + task['name']) }}
+        {% endfor %}
         {% endfor %}
         UpdateDBLambdaArn: !GetAtt UpdateDB.Outputs.LambdaArn
         GetFilesLambdaArn: !GetAtt GetFiles.Outputs.LambdaArn
@@ -124,8 +128,10 @@ Resources:
             Action: batch:SubmitJob
             Resource:
               - !Ref JobQueueArn
-              {% for job_type in job_types %}
-              - !Ref {{ snake_to_pascal_case(job_type) }}
+              {% for job_type, job_spec in job_types.items() %}
+              {% for task in job_spec['tasks'] %}
+              - !Ref {{ snake_to_pascal_case(job_type + '_' + task['name']) }}
+              {% endfor %}
               {% endfor %}
           - Effect: Allow
             Action: batch:DescribeJobs
