Clean up job task naming

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -92,7 +92,7 @@
         {
           "Variable": "$.job_type",
           "StringEquals": "{{ job_type }}",
-          "Next": "{{ job_type + '_' + job_spec['tasks'][0]['name'] }}"
+          "Next": "{{ job_spec['tasks'][0]['name'] }}"
         }{% if not loop.last %},{% endif %}
         {% endfor %}
       ],
@@ -100,11 +100,11 @@
     },
     {% for job_type, job_spec in job_types.items() %}
     {% for task in job_spec['tasks'] %}
-    "{{ job_type + '_' + task['name'] }}": {
+    "{{ task['name'] }}": {
       "Type": "Task",
       "Resource": "arn:aws:states:::batch:submitJob.sync",
       "Parameters": {
-        "JobDefinition": "{{ '${'+ snake_to_pascal_case(job_type + '_' + task['name']) + '}' }}",
+        "JobDefinition": "{{ '${'+ snake_to_pascal_case(task['name']) + '}' }}",
         "JobName.$": "$.job_id",
         "JobQueue": "${JobQueueArn}",
         "ShareIdentifier": "default",
@@ -116,7 +116,7 @@
         }
       },
       "ResultPath": "$.results.processing_results",
-      "Next": "{% if not loop.last %}{{ job_type + '_' + loop.nextitem['name'] }}{% else %}GET_FILES{% endif %}",
+      "Next": "{% if not loop.last %}{{ loop.nextitem['name'] }}{% else %}GET_FILES{% endif %}",
       "Retry": [
         {
           "ErrorEquals": [
