--- a/apps/check-for-processing-errors/check-for-processing-errors.yml.j2
+++ b/apps/check-for-processing-errors/check-for-processing-errors.yml.j2
@@ -67,7 +67,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code: src/
-      Handler: set_status.lambda_handler
+      Handler: check_for_processing_errors.lambda_handler
       MemorySize: 128
       Role: !GetAtt Role.Arn
       Runtime: python3.9
