--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -434,8 +434,8 @@ components:
         expiration_time:
           $ref: "#/components/schemas/datetime"
           nullable: true
-        processing_time_in_seconds:
-          $ref: "#/components/schemas/processing_time_in_seconds"
+        processing_times:
+          $ref: "#/components/schemas/processing_times"
         priority:
           $ref: "#/components/schemas/priority"
 
@@ -543,11 +543,20 @@ components:
       minimum: 0
       maximum: 9999
 
+    processing_times:
+      description: >
+        A list of run times for the job's processing steps in the order that they were executed. For example,
+        a job comprised of a single processing step would yield a list containing one processing time, while a job
+        comprised on three processing steps would yield a list containing three processing times. An empty list
+        represents a failure to calculate processing times.
+      type: array
+      items:
+        $ref: '#/components/schemas/processing_time_in_seconds'
+
     processing_time_in_seconds:
       description: >
-        Run time in seconds for the final processing attempt (regardless of whether it succeeded). A value of zero
-        indicates that the job failed before reaching the processing step or that there was an error in calculating
-        processing time.
+        Run time in seconds for a particular processing step's final attempt (regardless of whether it succeeded).
+        A value of zero indicates that there were no attempts.
       type: number
       minimum: 0
 
