--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -547,7 +547,7 @@ components:
       description: >
         A list of run times for the job's processing steps in the order that they were executed. For example,
         a job comprised of a single processing step would yield a list containing one processing time, while a job
-        comprised on three processing steps would yield a list containing three processing times. An empty list
+        comprised of three processing steps would yield a list containing three processing times. An empty list
         represents a failure to calculate processing times.
       type: array
       items:
