Remove trailing comma

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -139,7 +139,7 @@
             "States.ALL"
           ],
           "Next": "PROCESSING_FAILED",
-          "ResultPath": "$.results.processing_results['{{ loop.index0 }}']",
+          "ResultPath": "$.results.processing_results['{{ loop.index0 }}']"
         }
       ]
     },
