use openapi-spec-validtor during make openapi-validate

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml.j2
@@ -462,7 +462,7 @@ components:
       description: Date and time object formatted according to ISO 8601
       type: string
       format: date-time
-      example: 2020-06-04T18:00:03+00:00
+      example: "2020-06-04T18:00:03+00:00"
 
     intersectsWith:
       description: Area-of-interest as a WKT string.
