--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -81,7 +81,7 @@ Parameters:
   InstanceTypes:
     Description: EC2 instance types to include in AWS Batch Compute Environment
     Type: CommaDelimitedList
-    Default: r5d.xlarge
+    Default: r6id.xlarge
 
   {% if security_environment != 'EDC' %}
   DomainName:
