--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -174,6 +174,19 @@ Resources:
     Type: AWS::CloudFormation::Stack
     Properties:
       Parameters:
+        SubscriptionsTable: !Ref SubscriptionsTable
+        SubscriptionWorkerArn: !Ref SubscriptionWorker.Outputs.LambdaArn
+        {% if security_environment == 'EDC' %}
+        PermissionsBoundaryPolicyArn: !Ref PermissionsBoundaryPolicyArn
+        SecurityGroupId: !GetAtt Cluster.Outputs.SecurityGroupId
+        SubnetIds: !Join [",", !Ref SubnetIds]
+        {% endif %}
+      TemplateURL: subscription-manager/subscription-manager-cf.yml
+
+  SubscriptionWorker:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
         JobsTable: !Ref JobsTable
         UsersTable: !Ref UsersTable
         SubscriptionsTable: !Ref SubscriptionsTable
@@ -183,7 +196,7 @@ Resources:
         SecurityGroupId: !GetAtt Cluster.Outputs.SecurityGroupId
         SubnetIds: !Join [",", !Ref SubnetIds]
         {% endif %}
-      TemplateURL: subscription-manager/subscription-manager-cf.yml
+      TemplateURL: subscription-worker/subscription-worker-cf.yml
 
   HandleBatchEvent:
     Type: AWS::CloudFormation::Stack
