Give subscription manager perms to invoke worker

--- a/apps/subscription-manager/subscription-manager-cf.yml.j2
+++ b/apps/subscription-manager/subscription-manager-cf.yml.j2
@@ -72,6 +72,10 @@ Resources:
             Action:
               - dynamodb:Scan
             Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${SubscriptionsTable}*"
+          - Effect: Allow
+            Action:
+              - lambda:InvokeFunction
+            Resource: !Ref SubscriptionWorkerArn
 
   Lambda:
     Type: AWS::Lambda::Function
