Update manager schedule and worker event age

--- a/apps/subscription-worker/subscription-worker-cf.yml.j2
+++ b/apps/subscription-worker/subscription-worker-cf.yml.j2
@@ -115,3 +115,4 @@ Resources:
       FunctionName: !Ref Lambda
       Qualifier: $LATEST
       MaximumRetryAttempts: 0
+      MaximumEventAgeInSeconds: 240
