add range key to execution_started index

--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -378,6 +378,8 @@ Resources:
           KeySchema:
             - AttributeName: execution_started
               KeyType: HASH
+            - AttributeName: request_time
+              KeyType: RANGE
           Projection:
             ProjectionType: ALL
 
