--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -355,7 +355,7 @@ Resources:
         - AttributeName: request_time
           AttributeType: S
         - AttributeName: execution_started
-          AttributeType: B
+          AttributeType: S
       KeySchema:
         - AttributeName: job_id
           KeyType: HASH
