Update StartExecutionManager timeout and schedule

--- a/apps/start-execution-manager/start-execution-manager-cf.yml.j2
+++ b/apps/start-execution-manager/start-execution-manager-cf.yml.j2
@@ -83,7 +83,7 @@ Resources:
       MemorySize: 128
       Role: !GetAtt Role.Arn
       Runtime: python3.9
-      Timeout: 45
+      Timeout: 10
       {% if security_environment == 'EDC' %}
       VpcConfig:
         SecurityGroupIds:
@@ -101,7 +101,7 @@ Resources:
   Schedule:
     Type: AWS::Events::Rule
     Properties:
-      ScheduleExpression: "rate(1 minute)"
+      ScheduleExpression: "rate(2 minutes)"
       Targets:
         - Arn: !GetAtt Lambda.Arn
           Id: lambda
