reduce worker concurrency by running manager twice as often for half the jobs

--- a/apps/start-execution-manager/start-execution-manager-cf.yml.j2
+++ b/apps/start-execution-manager/start-execution-manager-cf.yml.j2
@@ -101,7 +101,7 @@ Resources:
   Schedule:
     Type: AWS::Events::Rule
     Properties:
-      ScheduleExpression: "rate(2 minutes)"
+      ScheduleExpression: "rate(1 minute)"
       Targets:
         - Arn: !GetAtt Lambda.Arn
           Id: lambda
