fix step function typos

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -78,7 +78,7 @@
                 {
                   "Variable": "$.job_type",
                   "StringEquals": "WATER_MAP"
-                },
+                }
               ]
             },
             {
@@ -90,7 +90,7 @@
               "NumericEquals": 10
             }
           ],
-          "Next': "USE_10M_MEMORY"
+          "Next": "USE_10M_MEMORY"
         }
       ],
       "Default": "USE_DEFAULT_MEMORY"
