fix step function state transition

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -36,7 +36,7 @@
       "Type": "Pass",
       "InputPath": "$.job_id",
       "ResultPath": "$.job_parameters.bucket_prefix",
-      "Next": "INSPECT_GRANULE_TYPE"
+      "Next": "INSPECT_MEMORY_REQUIREMENTS"
     },
     "INSPECT_MEMORY_REQUIREMENTS": {
       "Type": "Choice",
