--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -73,7 +73,7 @@
               "Or": [
                 {
                   "Variable": "$.job_type",
-                  "StringEquals": "RTC_GAMA"
+                  "StringEquals": "RTC_GAMMA"
                 },
                 {
                   "Variable": "$.job_type",
