string comparison for resolution in step function

--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -87,7 +87,7 @@
             },
             {
               "Variable": "$.job_parameters.resolution",
-              "NumericEquals": 10
+              "StringEquals": "10"
             }
           ],
           "Next": "USE_10M_MEMORY"
