plumb in secret arn from deploy envs

--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -9,9 +9,8 @@ Parameters:
     Type: List<AWS::EC2::Subnet::Id>
 
   SecretsArn:
-    Description: ARN of Secret in AWS Secrets Manager.
+    Description: ARN of Secret in AWS Secrets Manager containing all the credentials needed for job tasks.
     Type: String
-    NoEcho: true
 
   ImageTag:
     Type: String
