--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -8,7 +8,7 @@ Parameters:
   SubnetIds:
     Type: List<AWS::EC2::Subnet::Id>
 
-  SecretsArn:
+  SecretArn:
     Description: ARN of Secret in AWS Secrets Manager containing all the credentials needed for job tasks.
     Type: String
 
