--- a/apps/workflow-cf.yml.j2
+++ b/apps/workflow-cf.yml.j2
@@ -67,11 +67,13 @@ Resources:
           {% for command in task['command'] %}
           - {{ command }}
           {% endfor %}
+        {% if task.get('secrets', []) %}
         Secrets:
-          {% for secret in task.get('secrets', []) %}
+          {% for secret in task['secrets'] %}
           - Name: {{ secret }}
             ValueFrom: !Sub "${SecretArn}:{{ secret }}::"
           {% endfor %}
+        {% endif %}
       Timeout:
         AttemptDurationSeconds: {{ task['timeout'] }}
   {% endfor %}
